[gd_scene load_steps=6 format=3 uid="uid://dp42fom7cc3n0"]

[ext_resource type="Script" uid="uid://dcvc700ur1w4b" path="res://addons/basic_settings_menu/settings_menu.gd" id="2_m8nmd"]
[ext_resource type="PackedScene" uid="uid://bwcsibejua3bb" path="res://addons/basic_settings_menu/setting_confirmation_dialog.tscn" id="3_3fo0h"]
[ext_resource type="Script" uid="uid://cnfh1rl7a17mv" path="res://addons/my-ecosystem-template/transitions/popup_animator.gd" id="4_k0wj0"]
[ext_resource type="Script" uid="uid://cmo5qw3rubish" path="res://addons/my-ecosystem-template/buttons/anim_button.gd" id="6_3nbua"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n80e"]
bg_color = Color(1, 1, 1, 1)

[node name="Settings" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_m8nmd")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.533333, 0.6, 0.780392, 0.101961)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.115451
anchor_top = -0.143519
anchor_right = 1.13628
anchor_bottom = 1.17284
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2n80e")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1
current_tab = 1

[node name="MENU_OPTIONS_ACCESSIBILITY" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
metadata/_tab_index = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_ACCESSIBILITY"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_ACCESSIBILITY/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="Accessibility" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_ACCESSIBILITY/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="MENU_OPTIONS_GAMEPLAY" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
metadata/_tab_index = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_GAMEPLAY"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_GAMEPLAY/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="Gameplay" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_GAMEPLAY/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="MENU_OPTIONS_VIDEO" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
metadata/_tab_index = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_VIDEO"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_VIDEO/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="Video" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_VIDEO/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MENU_OPTIONS_SOUND" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
metadata/_tab_index = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_SOUND"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_SOUND/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="Audio" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/MENU_OPTIONS_SOUND/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BottomContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "MENU_LABEL_APPLY_AND_SAVE"
script = ExtResource("6_3nbua")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "MENU_LABEL_BACK"
script = ExtResource("6_3nbua")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="ConfirmationDialog" parent="." instance=ExtResource("3_3fo0h")]
unique_name_in_owner = true
visible = false

[node name="PopupAnimator" type="Node" parent="." node_paths=PackedStringArray("target_node")]
unique_name_in_owner = true
script = ExtResource("4_k0wj0")
target_node = NodePath("..")
metadata/_custom_type_script = "uid://cnfh1rl7a17mv"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomContainer/BackButton" to="." method="_on_back_button_pressed"]
